--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:buster
 
-RUN apt update && apt install -y\
+RUN apt-get update && apt-get install -y\
 	mariadb-server\
 	&& rm -rf /var/lib/apt/lists/*
 
