--- a/srcs/.env
+++ b/srcs/.env
@@ -1,13 +1,14 @@
 DOMAIN_NAME=jinbe.42.fr
 
-# certificates
-# CERTS_=./XXXXXXXXXXXX
-
-
 # MYSQL SETUP
 DB_NAME=wordpress_db
+DB_USER=jinbe
+DB_USER_PASS=1234
 
-USER1=jinbe
-USER1_PASS=1234
-USER2=jinbekim
-USER2_PASS=1234
+# WORDPRESS
+# administrator
+WP_USER1=jinbe
+WP_USER1_PASS=1234
+# author
+WP_USER2=jinbekim
+WP_USER2_PASS=1234
