--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,9 +1,8 @@
 FROM debian:buster
 
 RUN apt-get update && apt-get upgrade && apt-get install -y \
-	php7.3-fpm\
-	mariadb-client\
-	php7.3-mysql\
+	php-fpm\
+	php-mysql\
 	wget\
 	curl\
 	&& rm -rf /var/lib/apt/lists/*
@@ -11,6 +10,17 @@ RUN apt-get update && apt-get upgrade && apt-get install -y \
 COPY ./conf/wp-config.php /tmp/wp-config.php
 COPY ./tools/init.sh ./
 
+# wordpress
+RUN wget -c https://wordpress.org/latest.tar.gz &&\
+	tar -xvf latest.tar.gz &&\
+	mv /tmp/wp-config.php /wordpress/ &&\
+	rm -rf latest.tar.gz
+# install wp-cli
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar &&\
+	chmod +x wp-cli.phar &&\
+	mv wp-cli.phar /usr/local/bin/wp
+
+# set fpm conf to receive req fm nginx
 RUN sed -i 's/\/run\/php\/php7.3-fpm.sock/0.0.0.0:9000/g' /etc/php/7.3/fpm/pool.d/www.conf &&\
 	service php7.3-fpm start
 
