--- a/srcs/.env
+++ b/srcs/.env
@@ -6,10 +6,14 @@ DB_NAME=wordpress_db
 DB_USER=jinbe
 DB_USER_PW=1234
 
-# WORDPRESS
+#WORDPRESS
 # administrator
 WP_USER1=jinbe
 WP_USER1_PW=1234
 # author
 WP_USER2=jinbekim
 WP_USER2_PW=1234
+
+#volumes
+DB="/home/jinbekim/data/db"
+WP="/home/jinbekim/data/wp"
