--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -5,16 +5,12 @@ RUN apt-get update && apt-get upgrade && apt-get install -y \
 	php-mysql\
 	wget\
 	curl\
+	sendmail\
 	&& rm -rf /var/lib/apt/lists/*
 
 COPY ./conf/wp-config.php /tmp/wp-config.php
 COPY ./tools/init.sh ./
 
-# wordpress
-RUN wget -c https://wordpress.org/latest.tar.gz &&\
-	tar -xvf latest.tar.gz &&\
-	mv /tmp/wp-config.php /wordpress/ &&\
-	rm -rf latest.tar.gz
 # install wp-cli
 RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar &&\
 	chmod +x wp-cli.phar &&\
