--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,8 +1,5 @@
 version: '2'
 
-volumes:
-  db: {}
-
 services:
   nginx:
     container_name: nginx
@@ -14,7 +11,7 @@ services:
     networks:
       - inception
     volumes:
-      - ${WP}:/var/www/html/
+      - ./wp:/var/www/html/
     depends_on:
       - wordpress
 
@@ -26,9 +23,10 @@ services:
       - "3306"
     env_file:
       - .env
+    tty: true
     # the m1 has a host volumes mount issue
     volumes:
-      - ${DB}:/var/lib/mysql
+      - ./db:/var/lib/mysql
     networks:
       - inception
 
@@ -44,7 +42,7 @@ services:
     env_file:
       - .env
     volumes:
-      - ${WP}:/var/www/html
+      - ./wp:/var/www/html
     networks:
       - inception
 
